# Polyglot_Interpreter

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  backup.sql  diesel.toml  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
exmples/: fac.v  main.v
src/: logging.rs  main.rs
src/crates/db/: Cargo.toml
src/crates/db/src/: db.rs  lib.rs  model.rs  schema.rs  structure.rs
src/crates/interpreter/: Cargo.toml
src/crates/interpreter/src/: interpreter.rs
src/crates/lexer/: Cargo.toml
src/crates/lexer/src/: ast.rs  lib.rs  token.rs  tokenizer.rs
src/crates/parser/: Cargo.toml
src/crates/parser/src/: ast.rs  parser.rs
src/crates/shared/: Cargo.toml
src/crates/shared/src/: configuration.rs  lib.rs  logging.rs
src/crates/tests/: Cargo.toml
src/crates/tests/src/: lib.rs  test_helper.rs  tests.rs
src/crates/types/: Cargo.toml
src/crates/types/src/: lib.rs  type_system.rs
src/types/: type_system.rs
