[workspace.package]
name = "usqlrepl"
version = "0.1.0"
edition = "2024"


[workspace]
members = [
  "src/crates/db",
  "src/crates/lexer", 
  "src/crates/shared",
  "src/crates/types",
]
resolver = "2"

[package]
name = "usqlrepl"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
lexer = { path = "src/crates/lexer"}
types = { path = "src/crates/types" }
db = { path = "src/crates/db" }
shared = { path = "src/crates/shared"}

mysql = "26.0.1"
diesel = { version = "2.1.0", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"
homedir = "0.3.6"

tracing = "0.1.43"
tracing-subscriber = "0.3"


[dependencies]
regex = { workspace = true }
lexer = { workspace = true }
types = { workspace = true }
db = { workspace = true }
shared = { workspace = true }
diesel = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4.42"
