[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
lazy_static = { workspace = true }
homedir = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml ={ workspace = true }